--- a/src/main/java/todo
+++ b/src/main/java/todo
@@ -1,4 +1,6 @@
 todo
+Maybe use SPI to do contexts and other important things
+
 Change how i do the contexts, its not intuitive enough
 
 Create a Access Transformer API so the remapper can use it. todo
